# A4Design

./: .gitignore  README.md  pyproject.toml  requirements.txt
agents/: multi-agent.ipynb  prompts.py
agents/data/: uml_knowledge.db
agents/multi-agent/: agents.py  config.py  evaluation.py  main.py  memory.py  model_manager.py  models.py  plantuml_tools.py  utils.py  workflow.py
data/: Analysis.xlsx  complete_shots.json  index.pkl  test_exercises.json
data/processed/: diagrams.json  few_shot.json  few_shot_simplified_format.json  generated_diagrams_cv.json  labels.json  test_exercises.json
data/raw/: ground_truth.xlsx
notebooks/: multi-agent.ipynb
output/cache/: scoring_threshold_generation_cache.json  threshold_generation_cache.json
output/evaluation/: convergence_threshold_results.json  joint_threshold_results.json  scoring_threshold_results.json
output/multi_agent_critic/: exercise_1_diagram.puml  exercise_1_metrics.json  exercise_1_output.txt  exercise_2_diagram.puml  exercise_2_metrics.json  exercise_2_output.txt  exercise_3_diagram.puml  exercise_3_metrics.json  exercise_3_output.txt
output/multi_agent_scorer/: exercise_1_diagram.puml  exercise_1_metrics.json  exercise_2_diagram.puml  exercise_2_metrics.json  exercise_3_diagram.puml  exercise_3_metrics.json
output/single_agent/: exercise_1_diagram.puml  exercise_1_metrics.json  exercise_2_diagram.puml  exercise_2_metrics.json  exercise_3_diagram.puml  exercise_3_metrics.json
output/statistical_results/: detailed_results.json
scripts/: main.py
src/: config.py
src/agents/multi_agent/: agents.py  config.py  main.py  memory.py  model_manager.py  workflow.py
src/agents/single_agent/: agent.py  config.py  main.py  workflow.py
src/core/: few_shot_loader.py  invoke.py  logger.py  model_manager.py  models.py  plantuml.py  prompts.py  utils.py
src/evaluation/: convergence_threshold_optimization.py  evaluation.py  evaluation_threshold_optimization.py  joint_threshold_optimization.py  scoring_threshold_optimization.py  threshold_optimizer.py
